--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,7 +33,8 @@
         {% block body %}{% endblock %}
     {% include '_footer.html.twig' %}
     {% block javascripts %}
-        {{ encore_entry_script_tags('app') }}
+        {{ encore_entry_script_tags('main') }}
+
     {% endblock %}
     </body>
 </html>
