--- a/public/Blog/blog.css
+++ b/public/Blog/blog.css
@@ -102,8 +102,12 @@ body {
 
 .mainS {
   width: 100%;
-  height: 4400px;
+  height: auto;
   background-color: #bfbfbf; }
+  .mainS .container .row {
+    height: auto;
+    text-align: center;
+    padding: 25px 0; }
 
 .oneObj {
   background-color: white;
@@ -121,7 +125,7 @@ body {
   align-items: center;
   justify-content: center; }
   .infTwoObj p {
-    padding: 0 300px; }
+    padding: 0 200px; }
 
 .imgInOneObj {
   max-width: 100%;
