--- a/public/Blog/blog.scss
+++ b/public/Blog/blog.scss
@@ -143,8 +143,17 @@ body {
 
 .mainS {
     width: 100%;
-    height: 4400px;
+    height: auto;
     background-color: #bfbfbf;
+
+    .container {
+        .row {
+            height: auto;
+            text-align: center;
+            padding: 25px 0;
+        }
+    }
+
 }
 
 .oneObj {
@@ -168,7 +177,7 @@ body {
     align-items: center;
     justify-content: center;
     p {
-        padding: 0 300px;
+        padding: 0 200px;
     }
 }
 
@@ -204,4 +213,5 @@ body {
     }
 
 }
+
 
