--- a/templates/pages/homePage.html.twig
+++ b/templates/pages/homePage.html.twig
@@ -12,7 +12,7 @@
         <section>
             <div class="container">
                 <div class="row">
-                    <div id="CollApp" class="col-lg-12 col-md-12 octH">
+                    <div class="col-lg-12 col-md-12 octH">
                         <h1>OctoWice – Закажи сайт у культурных профессионалов!</h1>
                         <p>
                             Сайты помогут – построить имидж, увеличить продажи,<br> привлечь новых клиентов.
