--- a/public/style/style.scss
+++ b/public/style/style.scss
@@ -32,6 +32,11 @@ body {
             list-style-type: none;
             padding: 10px 15px;
 
+          #bacRed {
+            background-color: red;
+            color: white;
+            padding: 7px 5px;
+          }
         }
     }
 }
@@ -188,7 +193,7 @@ body {
 
 .TwoSec {
     width: 100%;
-    height: 800px;
+    height: auto;
     text-align: center;
     padding-top: 50px;
     h1 {
