--- a/public/style/style.css
+++ b/public/style/style.css
@@ -22,6 +22,10 @@ body {
     body .headerB li {
       list-style-type: none;
       padding: 10px 15px; }
+      body .headerB li #bacRed {
+        background-color: red;
+        color: white;
+        padding: 7px 5px; }
 
 #imgInHL {
   padding: 0 15px;
@@ -139,7 +143,7 @@ body {
 
 .TwoSec {
   width: 100%;
-  height: 800px;
+  height: auto;
   text-align: center;
   padding-top: 50px; }
   .TwoSec h1 {
