--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -15,7 +15,7 @@
                         </li>
                         <li><a href="{{ path('blog') }}">Блог</a></li>
                         <li><a href="#">Контакты</a></li>
-                        <li><a href="#">Остались вопросы?</a></li>
+                        <li><a id="bacRed" href="#">Остались вопросы?</a></li>
                     </ul>
                 </div>
             </div>
