--- a/public/Blog/blog.scss
+++ b/public/Blog/blog.scss
@@ -156,10 +156,10 @@ body {
 
 }
 
-.oneObj {
+.oneObj, .twoObj {
     background-color: white;
-    height: 1200px;
-    margin-top: 200px;
+    height: 200px;
+    //margin-top: 200px;
 }
 
 .infOneObj {
