--- a/public/Blog/blog.css
+++ b/public/Blog/blog.css
@@ -109,10 +109,9 @@ body {
     text-align: center;
     padding: 25px 0; }
 
-.oneObj {
+.oneObj, .twoObj {
   background-color: white;
-  height: 1200px;
-  margin-top: 200px; }
+  height: 200px; }
 
 .infOneObj h1 {
   padding: 70px 70px 5px 40px; }
