--- a/public/mediaOcto/media.css
+++ b/public/mediaOcto/media.css
@@ -14,9 +14,10 @@
     }
 
     .imgR img {
-        width: 200px;
-        height: auto;
-        margin-top: 142px !important;
+        /*width: 200px;*/
+        /*height: auto;*/
+        /*margin-top: 142px !important;*/
+        display: none;
     }
 
     .pointers {
@@ -354,8 +355,9 @@
     }
 
     .imgR img {
-        width: 200px !important;
-        height: auto;
+        /*width: 200px !important;*/
+        /*height: auto;*/
+        display: none;
     }
 
     .imgR {
@@ -664,8 +666,9 @@
     }
 
     .imgR img {
-        max-width: 200px;
-        height: auto;
+        /*max-width: 200px;*/
+        /*height: auto;*/
+        display: none;
     }
 
     .imgR {
@@ -737,7 +740,7 @@
     .BuCen p {
         color: black;
         font-weight: 700;
-        text-shadow: 1px 1px 40px black, 0 0 1em white;
+        /*text-shadow: 1px 1px 40px black, 0 0 1em white;*/
     }
 
     .buttonBlock .brifC {
@@ -794,7 +797,7 @@
     }
 
     .blogTextInf {
-        margin-top: 0;
+        padding-bottom: 25px;
     }
 
     .buttonInInfBlock {
@@ -963,8 +966,9 @@
     }
 
     .imgR img {
-        max-width: 300px;
-        height: auto;
+        /*max-width: 300px;*/
+        /*height: auto;*/
+        display: none;
 
     }
 
@@ -1033,7 +1037,7 @@
     .BuCen p {
         color: black;
         font-weight: 700;
-        text-shadow: 1px 1px 40px black, 0 0 1em white;
+        /*text-shadow: 1px 1px 40px black, 0 0 1em white;*/
     }
 
     .buttonBlock .brifC {
