--- a/public/style/style.scss
+++ b/public/style/style.scss
@@ -188,7 +188,7 @@ body {
 
 .TwoSec {
     width: 100%;
-    height: 800px;
+    height: auto;
     text-align: center;
     padding-top: 50px;
     h1 {
