--- a/public/Services/services.scss
+++ b/public/Services/services.scss
@@ -137,7 +137,7 @@ nav {
     padding: 100px 0;
     p {
         color: #979797;
-        margin-right: 150px;
+        //margin-right: 150px;
     }
 }
 
