--- a/templates/pages/servicesPage.html.twig
+++ b/templates/pages/servicesPage.html.twig
@@ -94,7 +94,7 @@
                 </div>
 
                 <div class="row buttonServ">
-                    <div><button>Заказать услугу</button></div>
+                    <div><a href="{{ path('choiceService') }}"><button>Заказать услугу</button></a></div>
                 </div>
 
             </div>
