--- a/public/Blog/blog.css
+++ b/public/Blog/blog.css
@@ -107,7 +107,8 @@ body {
   .mainS .container .row {
     height: auto;
     text-align: center;
-    padding: 25px 0; }
+    background-color: lightgray;
+    margin: 100px 0; }
 
 .oneObj, .twoObj {
   background-color: white;
