--- a/public/Blog/blog.scss
+++ b/public/Blog/blog.scss
@@ -150,7 +150,8 @@ body {
         .row {
             height: auto;
             text-align: center;
-            padding: 25px 0;
+            background-color: lightgray;
+            margin: 100px 0;
         }
     }
 
