--- a/public/Services/services.css
+++ b/public/Services/services.css
@@ -108,7 +108,7 @@ nav {
   .butInNav p {
     padding: 13px 20px;
     margin: 0;
-    color: white; }
+    color: white !important; }
 
 .butPos {
   display: flex;
