--- a/public/Services/services.scss
+++ b/public/Services/services.scss
@@ -155,7 +155,7 @@ nav {
      p {
          padding: 13px 20px;
          margin: 0;
-         color: white;
+         color: white !important;
 
      }
 }
