--- a/public/mediaOcto/media.css
+++ b/public/mediaOcto/media.css
@@ -130,7 +130,8 @@
         height: auto;
         background-color: #171717 !important;
         background-image: none;
-        margin-top: 300px !important;
+        /*margin-top: 300px;*/
+        padding-bottom: 0;
     }
 
     .hInImg {
@@ -320,6 +321,7 @@
 
     .infInBeli {
         padding-bottom: 0 !important;
+        margin-top: 100px;
     }
 
     #infW {
@@ -337,6 +339,31 @@
 
     .frR p {
         font-size: 15px !important;
+    }
+
+    .TwoSec p {
+        font-size: 18px;
+    }
+
+    .textBeli p {
+        display: none;
+    }
+
+    .bgBl {
+        height: 200px;
+    }
+
+    .WhaWeBeliIn {
+        background-color: #363636;
+    }
+
+    .infInBeli h2 {
+        color: lightgray;
+    }
+
+    .ourValu {
+        padding: 100px 0;
+        height: auto;
     }
 
 }
@@ -479,7 +506,8 @@
         height: auto;
         background-color: #171717 !important;
         background-image: none;
-        margin-top: 300px !important;
+        /*margin-top: 300px;*/
+        padding-bottom: 0;
     }
 
     .hInImg {
@@ -796,7 +824,8 @@
         height: auto;
         background-color: #171717 !important;
         background-image: none;
-        margin-top: 150px;
+        /*margin-top: 150px;*/
+        padding-bottom: 0;
     }
 
     .hInImg {
@@ -952,6 +981,31 @@
         top: 1px;
     }
 
+    .TwoSec p {
+        font-size: 18px;
+    }
+
+    .textBeli p {
+        display: none;
+    }
+
+    .bgBl {
+        height: 200px;
+    }
+
+    .WhaWeBeliIn {
+        background-color: #363636;
+    }
+
+    .infInBeli h2 {
+        color: lightgray;
+    }
+
+    .ourValu {
+        padding: 100px 0;
+        height: auto;
+    }
+
 }
 
 @media only screen and (max-width: 768px) {
@@ -1008,10 +1062,12 @@
 
     .iconsMes {
         display: none;
+
     }
 
     .listF ul {
         display: none;
+
     }
 
     .LineP {
@@ -1102,8 +1158,9 @@
         height: auto;
         background-color: #171717 !important;
         background-image: none;
-        margin-top: 150px;
+        /*margin-top: 150px;*/
         padding-bottom: 25px;
+
     }
 
     .hInImg {
@@ -1285,7 +1342,7 @@
 @media only screen and (max-width: 1024px) {
 
     header section {
-        display: none;
+        /*display: none;*/
     }
 
     .headerB ul li {
@@ -1298,7 +1355,6 @@
     }
 
     nav p {
-
         height: auto;
     }
 
@@ -1312,7 +1368,7 @@
     }
 
     .imgR img {
-        width: 400px;
+        width: 58%;
         height: auto;
     }
 
@@ -1336,11 +1392,11 @@
     }
 
     .iconsMes {
-        display: none;
+        /*display: none;*/
     }
 
     .listF ul {
-        display: none;
+        /*display: none;*/
     }
 
     .LineP {
@@ -1431,7 +1487,7 @@
         height: auto;
         background-color: #171717 !important;
         background-image: none;
-        margin-top: 150px;
+        /*margin-top: 150px;*/
         padding-bottom: 25px;
     }
 
@@ -1604,14 +1660,14 @@
     }
 }
 
-@media only screen and (max-width: 1920px) {
+@media only screen and (min-width: 1920px) and (max-height: 1080px) {
     .imgR img {
         max-width: 95%;
     }
 
     .ThereSec {
         height: auto;
-        padding-bottom: 275px;
+        padding-bottom: 215px;
     }
 
     .firstButton {
@@ -1621,6 +1677,11 @@
     .descOfServ {
         height: auto;
         padding-bottom: 200px;
+    }
+    .inpInf {
+        width: 100%;
+        padding: 0;
+        margin: 0;
     }
 
 }
