--- a/public/style/style.scss
+++ b/public/style/style.scss
@@ -207,7 +207,8 @@ body {
 .ThereSec {
     background-image: url(../img/ServicesBackground.svg);
     max-width: 100%;
-    height: 1650px;
+    height: auto;
+    padding-bottom: 250px;
 }
 
 #imgSB {
