--- a/templates/components/contactForm.html.twig
+++ b/templates/components/contactForm.html.twig
@@ -1,17 +1,20 @@
 <div>
-    <div class="row">
-        <div class="col-lg-12 col-md-12 inpInF">
-        {{ form_start(form,{'action': path('contacts')}) }}
-            {{ form_row(form.name,{'attr':{'placeholder':'Ваше Имя',
-                'size':'70px'}}) }}
-            {{ form_row(form.email,{'attr':{'placeholder':'Email',
-                'size':'70px'}}) }}
-            {{ form_row(form.telNumber,{'id':'telNumb','attr':{'placeholder':'Ваш номер телефона',
-                'size':'70px'}}) }}
-            {{ form_row(form.information,{'id':'spaL','attr':{'placeholder':'Подробнее о вашей компании, адрес вашего сайта',
-                'size':'70px'}}) }}
-            {{ form_row(form.save,{'attr':{'class':'butnInFTwo'}}) }}
-        {{ form_end(form) }}
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 col-md-12 inpInF">
+                {{ form_start(form,{'action': path('contacts')}) }}
+                {{ form_row(form.name,{'attr':{'placeholder':'Ваше Имя',
+                    'size':'70px'}}) }}
+                {{ form_row(form.email,{'attr':{'placeholder':'Email',
+                    'size':'70px'}}) }}
+                {{ form_row(form.telNumber,{'id':'telNumb','attr':{'placeholder':'Ваш номер телефона',
+                    'size':'70px'}}) }}
+                {{ form_row(form.information,{'id':'spaL','attr':{'placeholder':'Подробнее о вашей компании, адрес вашего сайта',
+                    'size':'70px'}}) }}
+                {{ form_row(form.save,{'attr':{'class':'butnInFTwo'}}) }}
+                {{ form_end(form) }}
+            </div>
         </div>
     </div>
+
 </div>
