--- a/public/mediaOcto/media.css
+++ b/public/mediaOcto/media.css
@@ -229,6 +229,7 @@
     .fiveBlockInfUs div {
         margin: 20px 15px;
         width: 100%;
+        height: auto;
     }
 
     .infoServ h1 {
@@ -604,6 +605,7 @@
     .fiveBlockInfUs div {
         margin: 20px 15px;
         width: 100%;
+        height: auto;
     }
 
     .infoServ h1 {
@@ -922,6 +924,7 @@
     .fiveBlockInfUs div {
         margin: 20px 15px;
         width: 100%;
+        height: auto;
     }
 
     .infoServ h1 {
