--- a/public/mediaOcto/media.css
+++ b/public/mediaOcto/media.css
@@ -331,8 +331,8 @@
     }
 
     .ourWork {
-        height: 3400px;
-    }
+         height: 3400px;
+     }
 
     .twBlInVal p {
         font-size: 20px !important;
@@ -449,6 +449,18 @@
 
     .algN {
         padding: 0;
+    }
+
+    .ourWork {
+        height: auto;
+    }
+
+    .blInW #infW {
+        width: 100%;
+    }
+
+    .imgV {
+        display: none;
     }
 
     .BuCen {
@@ -736,6 +748,18 @@
     }
 
     .listF ul {
+        display: none;
+    }
+
+    .ourWork {
+        height: auto;
+    }
+
+    .blInW #infW {
+        width: 100%;
+    }
+
+    .imgV {
         display: none;
     }
 
@@ -1068,6 +1092,19 @@
 
     }
 
+    .ourWork {
+        height: auto;
+    }
+
+    .blInW #infW {
+        width: 100%;
+    }
+
+    .posSh .row {
+        display: none;
+    }
+
+
     .listF ul {
         display: none;
 
@@ -1342,7 +1379,7 @@
 
 
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 1024px)  {
 
     header section {
         /*display: none;*/
@@ -1436,6 +1473,11 @@
     .BuCen {
         margin-top: 40px;
     }
+
+    .posSh .row {
+        display: none;
+    }
+
 
     .BuCen p {
         color: black;
@@ -1662,6 +1704,16 @@
         text-align: center !important;
     }
 }
+
+@media only screen and (min-width: 1440px) and (max-width: 1920px)  {
+
+    .imgR img {
+        width: 100%;
+    }
+
+}
+
+
 
 @media only screen and (min-width: 1920px) and (max-height: 1080px) {
     .imgR img {
