--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -1,6 +1,23 @@
 
 <header>
-    <section>
+
+    {#<section class="adptiveMenu">#}
+
+        {#<button class="menu-toggle"></button>#}
+        {#<nav>#}
+            {#<ul class="menu">#}
+                {#<li data-text="Home">Главная</li>#}
+                {#<li data-text="Projects">Про нас</li>#}
+                {#<li data-text="About">Услуги</li>#}
+                {#<li data-text="Contact">Блог</li>#}
+                {#<li data-text="Contact">Контакты</li>#}
+            {#</ul>#}
+        {#</nav>#}
+
+    {#</section>#}
+
+
+    <section class="headInf">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 headerB">
@@ -21,4 +38,5 @@
             </div>
         </div>
     </section>
+
 </header>
