--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,11 +15,14 @@
             <link rel="stylesheet" href="/mediaOcto/media.css">
             <link rel="stylesheet" href="/errors/errors.css">
             <link rel="stylesheet" href="/choicePage/choicePage.css">
+            <link rel="stylesheet" href="/adaptiveMenu/adaptiveMenu.css">
 
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/icon.css" integrity="sha256-Qm8mv8NyEDwniBPKGqdKIpYT0KFZlWY7GJ2F0cs3N/g=" crossorigin="anonymous" />
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/item.css" integrity="sha256-Zmhl7JzF/rWYir2WAAbCgfX9pJtoQ43vQOYsRv6jqAo=" crossorigin="anonymous" />
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/button.css" integrity="sha256-c9MUM6YakVqeTCPglbaeebZVH9GEZay8GPACCYydRaY=" crossorigin="anonymous" />
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/menu.css" integrity="sha256-QXVhP5B9h80o2da7dZ1P0o/iU6y/q26xiudmCtphp5k=" crossorigin="anonymous" />
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
             <link rel="shortcut icon" href="{{ asset('/img/Logo.jpg') }}" type="image/x-icon">
 
 
@@ -27,12 +30,17 @@
                   crossorigin="anonymous" />
             <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
                   crossorigin="anonymous">
+            <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
         {% endblock %}
     </head>
+
     <body>
     {% include '_header.html.twig' %}
+    {% include '_adaptiveMenu.html.twig' %}
         {% block body %}{% endblock %}
     {% include '_footer.html.twig' %}
+
     {% block javascripts %}
         {{ encore_entry_script_tags('app') }}
 
