--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -1,20 +1,26 @@
 
 <header>
 
+
     {#<section class="adptiveMenu">#}
 
-        {#<button class="menu-toggle"></button>#}
-        {#<nav>#}
-            {#<ul class="menu">#}
-                {#<li data-text="Home">Главная</li>#}
-                {#<li data-text="Projects">Про нас</li>#}
-                {#<li data-text="About">Услуги</li>#}
-                {#<li data-text="Contact">Блог</li>#}
-                {#<li data-text="Contact">Контакты</li>#}
-            {#</ul>#}
-        {#</nav>#}
+        {#<div class="container">#}
+            {#<div class="header">#}
+                {#<input class="nav-burger__checkbox" type="checkbox" id="burger">#}
+                {#<label class="nav-burger" for="burger">Меню</label>#}
+
+                {#<nav class="nav">#}
+                    {#<a class="nav__item" href="#">Главная</a>#}
+                    {#<a class="nav__item" href="#">Галерея</a>#}
+                    {#<a class="nav__item" href="#">Отзывы</a>#}
+                    {#<a class="nav__item" href="#">Контакты</a>#}
+                {#</nav>#}
+            {#</div>#}
+        {#</div>#}
 
     {#</section>#}
+
+
 
 
     <section class="headInf">
