--- a/templates/_adaptiveMenu.html.twig
+++ b/templates/_adaptiveMenu.html.twig
@@ -4,23 +4,26 @@
     <link rel="stylesheet" href="/adaptiveMenu/adaptiveMenu.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
           crossorigin="anonymous">
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    {#<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>#}
 
 {% endblock %}
 
     <section class="adptiveMenu">
 
-        <button class="menu-toggle"></button>
-        <nav>
-            <ul class="menu">
-                <li data-text="Главная">Главная</li>
-                <li data-text="Про нас">Про нас</li>
-                <li data-text="Услуги">Услуги</li>
-                <li data-text="Контакты">Контакты</li>
-            </ul>
-        </nav>
+        <div class="containerMenu">
+            <div class="header">
+                <input class="nav-burger__checkbox" type="checkbox" id="burger">
+                <label class="nav-burger" for="burger">Меню</label>
+
+                <nav class="nav">
+                    <a class="nav__item" href="{{ path('home') }}">Главная</a>
+                    <a class="nav__item" href="{{ path('aboutUs') }}">Про нас</a>
+                    <a class="nav__item" href="{{ path('services') }}">Услуги</a>
+                    <a class="nav__item" href="{{ path('blog') }}">Блог</a>
+                    <a class="nav__item" href="#">Контакты</a>
+                </nav>
+            </div>
+        </div>
 
     </section>
-
-
 
