--- a/templates/pages/homePage.html.twig
+++ b/templates/pages/homePage.html.twig
@@ -40,7 +40,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12 col-md-12 pointers">
-                        <img src="/img/pointers.jpg" alt="pointers">
+                        <img src="/img/pointersNew.png" alt="pointers">
                     </div>
                 </div>
             </div>
