--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -4,13 +4,13 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-md-12 iconsMes">
-                <a href="#">
+                <a  target="_blank" href="#">
                     <i class="fab fa-facebook"></i>
                 </a>
-                <a href="#">
+                <a  target="_blank" href="https://www.instagram.com/octowice/">
                     <i class="fab fa-instagram"></i>
                 </a>
-                <a href="#">
+                <a  target="_blank" href="#">
                     <i class="fab fa-twitter-square"></i>
                 </a>
             </div>
