--- a/templates/pages/homePage.html.twig
+++ b/templates/pages/homePage.html.twig
@@ -274,7 +274,7 @@
 
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12 col-md-12 infoFS">
+                    <div id="form" class="col-lg-12 col-md-12 infoFS">
                         <h1>Наши Контакты</h1>
                         <p><small><i>Свяжись с нами. Работаем с 10:00 - 19:00</i></small></p>
                         <div class="col-lg-12 col-md-12 conFImg">
