--- a/templates/pages/blogPage.html.twig
+++ b/templates/pages/blogPage.html.twig
@@ -48,7 +48,14 @@
                 </div>
             </div>
         </div>
+
     </section>
+
+    {{ render_esi(url(
+        'contacts'
+    )) }}
+
+
 
 </main>
 {% endblock %}
