--- a/public/style/style.scss
+++ b/public/style/style.scss
@@ -7,6 +7,23 @@ body {
     padding: 0;
   }
 
+
+
+    p {
+      z-index: 100 !important;
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+      z-index: 100 !important;
+    }
+
+    .adptiveMenu {
+      z-index: 999 !important;
+    }
+
+
+
+
 .headerB {
     z-index: 599;
     ul {
