--- a/templates/pages/homePage.html.twig
+++ b/templates/pages/homePage.html.twig
@@ -30,20 +30,25 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
 
-                        <div class="Post">
+
+                        <a href="{{ path('aboutUs') }}" class="Post">
                             <div class="BuCen">
                                 <p>Узнать о нас? </p>
                             </div>
+                        </a>
 
                         </div>
                     </div>
-                </div>
+
                 <div class="row">
                     <div class="col-lg-12 col-md-12 pointers">
                         <img src="/img/pointersNew.png" alt="pointers">
                     </div>
                 </div>
             </div>
+                
+                </div>
+
         </section>
 
 
@@ -207,7 +212,7 @@
                     <div class="row">
                         <div class="col-lg-12 col-md-12 brifC">
 
-                            <a href="#">
+                            <a href="{{ path('services') }}">
                                 <div class="firstButton">
                                     <p>Наши услуги</p>
                                 </div>
