--- a/templates/_adaptiveMenu.html.twig
+++ b/templates/_adaptiveMenu.html.twig
@@ -12,6 +12,7 @@
 
         <div class="containerMenu">
             <div class="header">
+                <img src="/img/OctoLogo.svg" alt="LogoOcto" width="65px" height="auto">
                 <input class="nav-burger__checkbox" type="checkbox" id="burger">
                 <label class="nav-burger" for="burger">Меню</label>
 
